@@ -1,10 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST Grutatxt-2.0.11.tar.gz 27845 RMD160 dc9cf9eaa9d2a12bd75069eed2561ddec87f4f3a SHA1 7b85e7098a342dc02fee9cb68048a950ec112d26 SHA256 4309a8ac76c3abf2611d67932a21daabe2e2958af71adeeb737953c0371eaab6
 DIST Grutatxt-2.0.13.tar.gz 29885 RMD160 37dc4d77d3a6326b5f50b97579ca0c2bd5bf7e95 SHA1 9fb750a0bb2b394daabc8807903c94edabebd7a8 SHA256 9a9e8daeb30fadd8a761275f3d827e7efd252adf47eff9858529926bfb2e92dc
 DIST Grutatxt-2.0.14.tar.gz 27001 RMD160 cff3f15004e7a903cf29c415a786f655ef57c3c6 SHA1 7033604105efcf6d949137a5c69edd317c8fed37 SHA256 983b85f2a180dcc46e609efbfa35e3277d287d7a0d0abadc67d48f5d26b86148
+DIST Grutatxt-2.0.16.tar.gz 29929 RMD160 5dcb00b0885b11462964fab23c5be0590ab8a429 SHA1 cb836ca1090bbeaa33e06b4b598b038a2197d6a5 SHA256 38c6c78e269ea8a6cbf384af812026216005d43f683e26c5bb1af47eb24d5960
 DIST Grutatxt-2.0.5.tar.gz 22077 RMD160 1085b92f4994b3cb2be5be718178cb601f48c117 SHA1 b3c584f6b452e343d9e1c9693001ab88ce374236 SHA256 9937a9766a2f2a0d5d5b0246436446064490290063c28f4d2cceb0f615069504
 EBUILD grutatxt-2.0.11.ebuild 667 RMD160 685e60fe81a6634b08251a5d06dabe66f4222f88 SHA1 8082f398f27e28b810c5e21eef213ed3f81c74fa SHA256 f0d4e4d39df3ab5f1da8fd0064bb8a099d311f754ddc1feeeca48c59e55be4ad
 EBUILD grutatxt-2.0.13.ebuild 674 RMD160 fb019b1f5f5d7243ed7175880bb616334b14b0ca SHA1 a9c88e4eaea40e42425bfdeaca49d3b87d9479a3 SHA256 27406acb67ca3bb51fcfd89b98caeb9c54dba8f36511ecc793a65e5162979293
 EBUILD grutatxt-2.0.14.ebuild 674 RMD160 99edb1b8220b5c799ec4945a8c92c829bf4d75b1 SHA1 5930765866b8b8209a938e96d76976efa1e93711 SHA256 d0c97ff0936b8327d50641ee609bed3a5cb5e4c2a932f17547b7a5122c54885a
+EBUILD grutatxt-2.0.16.ebuild 684 RMD160 a21675f76fa174c9f8b1e14ec5705824c63daa71 SHA1 9b968bd40ef1166afca831febed2d4beab9e9157 SHA256 5f43ab8f3efceedeafe74b6f9a0906bee35cde67844f1b96668f12f06837748b
 EBUILD grutatxt-2.0.5.ebuild 665 RMD160 82a6c6df9ec94fdff17bda89ff83a628d4ca4e0a SHA1 674bbf2b3e30359920168e32b5b87152a72da813 SHA256 d8a7aa7f89d116d3ffda9fad3099d002c85a7c5ff8c4c854f86846ab94179c8a
-MISC ChangeLog 1724 RMD160 cfef17cbc61ad483a1a5f5b034283aed1c322ce6 SHA1 dbb4d04102ec7b9f1c3c176a3b0406cdc3ac23c2 SHA256 789aee892d51a886075ec54257a8d2b630e32d4d2c150a579c21f84ea1e03d76
+MISC ChangeLog 1849 RMD160 845a653e66453b30db981b959e3a656d30acb470 SHA1 199fb94c7f46150e4f81802a7ad898132b702b20 SHA256 edcfbe9392793b1fd24f9f26cedb00092285e9cc7010968e1bee278210fbbf01
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPGlfvAAoJEEqz6FtPBkyjV2oH+wSl6b39yl5iSBx0nNfRdFpv
+faYX4Uc4e3tq5qKCu7uYHcOJuh2tqqJ9sW9ns7oFz8y5Sf+od0v9feknvQmXFbEh
+xoDZRwjmygi79FO20wc8MVixtlB9yqDn3t/DJL0KFAC5XHwwX+R/e2SF9To47YLr
+yAt22aoECYJtLfLfqHU4s0Ia7mzmAlgfU7//35X1h3BpM1XtW6RwcixPoqM0d/qQ
+dJ8EHOGbumlGqls/egXZwwAKt4fa1s/YemNVkFvVgAxWj/CNNA7we2FiNJyn/mWl
+nyoYTICmzuvEc5RAWwMZpNKDLUvnlOIC5hRVxlxg6PMrSwtKAZ8J2FRou8XhIaM=
+=vx7q
+-----END PGP SIGNATURE-----
