@@ -3,14 +3,26 @@ Hash: SHA1
 
 DIST mecab-perl-0.97.tar.gz 41089 RMD160 eb986913c08456ea1100b1ddf121f44ee69b2102 SHA1 7c6671c8b22e698becd8547a3ea8420f813be8cd SHA256 2e4773d6fbcad953ba2b71fae83893a47781f954716f13308213f11e275cb685
 DIST mecab-perl-0.98.tar.gz 41246 RMD160 5e016a1db88674ce55d433ab57d5c9baf7e38e72 SHA1 de0f41c734bdfb150c1855c3be01c7b561728a76 SHA256 951997b31977df3ca2421baf2c5e77bb6207a19588cde9683900f063c4a3135a
+DIST mecab-perl-0.991.tar.gz 48455 RMD160 4ae316c276019f036565d8b8bbc2ca018dd2115a SHA1 815bce7cca62f5fa9c3f23ef0660bbffe61d79c6 SHA256 1aa4ca56c5bf67addf766af8b8d401ba1042a111fc2b2b4dec11cfd765483ff0
 EBUILD mecab-perl-0.97.ebuild 610 RMD160 cc683cf52d2cea49e8bd67ccc74cdaf60af680c5 SHA1 f8873eb0d47909b0e7800fad207a3569100e2737 SHA256 5263876e107bdef92feb4a75a943f5c74a798229316a9b5d4ee63d373c4de944
 EBUILD mecab-perl-0.98.ebuild 612 RMD160 6a376e60e96fd736f8c90a5beca7feaa7b9fedc9 SHA1 842ccd7ab100e7f1c08017e1178659c43bf5602c SHA256 57810ed9da324ebd274a5c1030a3df245d8ebc599a8efd6c43284769ddbfb06c
-MISC ChangeLog 1585 RMD160 5fe7130390ed82641d1c0c4840edd30fa1e16a3f SHA1 7edde39616482158227c196deb54fea67a76a819 SHA256 19b5b61f7f24e70a525282654e5d4b361e0c604fcf8ee1c83e7583a4f025eb4d
+EBUILD mecab-perl-0.991.ebuild 646 RMD160 6a996116208e020beeee0b02db914624a3e6f3f8 SHA1 cf0a2c3bbefceb2c8c509a05033f3f2f0724e33d SHA256 ef7b9e3096d62b6d6b1f1b9e0a0f7a7810387ad2f6e63ae64ffcb09fa0be6e96
+MISC ChangeLog 1712 RMD160 3789fda935787f89faef3fca25a228a866b85831 SHA1 ef9830ddd22f1a337362e70954639b55b5eb9dac SHA256 c0ad093ad1349f23ec67614110769e8059caf7f6903719492d0c5d669544bb07
 MISC metadata.xml 235 RMD160 9429b182e1b81bf5a3b3cfd822ed1936303a29e8 SHA1 c04a84c324bac026e60d4caa3c2bf9709feb303a SHA256 8d99ffa5524acb0807c9e9b1e3223d26316d22ea918b07392be231b4eff4b1cb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAkyPf2MACgkQV3J2n04EauwhOQCfaml69IcLzMjEoXlbhsxMw2EH
-3/AAn3p4Q7dEUqTSnTYcXVX/zDfBlfXG
-=RHGn
+iQIcBAEBAgAGBQJPGim2AAoJECaGw+YFKA1pPQoQAI3e7KwfyCPdMuUj4eEJWDnl
+HlWo8LRLXU8kJhestVO7qwo7wmkw7/gT8Bhoa12RJkT3/4ce1lu2ddRm2yz8k0v3
+1/gIT6Ks+Z/216dnpNGHUR5AAog0Eyb9ImiRhOMeooaFw7axd4ViytRAmlJIT/HC
+rYmKILhUHLgxgiz+6+6lw17uOlNaToDsTLQ6GrtPtplf90363alCcNAi9Q4k3BJu
+KynpC+46DbqOcNraoIeoidE1PV7BphMOA3jw5XCRrrq9vqmaINIGxVcQJh77oEOG
+Lwf3leqqfzsbUN+c80FEd25AryxP+rqrADErFXf/qwe4x/srOl7AiWaynAT/zpoQ
+p8kSzyhGENrBmadrjEUYeok6jR3eivh1Ytb0K80EowMpQpK4gYVfwHdut7lxWOly
+wsSMErnO8ovb9f04IHYcdoyKxn+icn1xZbs8ulnwcUabKQihjghqZ3qrnpJAD87o
+SleNAciUTDHq9q80q0cuewVwfxoeePPZ3F7xeZb87MqGVjkYyHTpgAk7Qy/weKZE
+e+CnrpOPc6ozbTf+WOUTc1d27f1v0pEc6SXa8wwScUDtMaigWYOmNYN9Asr+GTVt
+mjaF3NYQYERTmD+cl83j8AtbiGzOapmOv3Wxz5QldytOEG0znovZ3DaK1dro/d1Z
+R0ARs7T5q/vX1j1RjCbB
+=79eO
 -----END PGP SIGNATURE-----
