@@ -1,0 +1,28 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/mecab-perl/mecab-perl-0.991.ebuild,v 1.1 2012/01/21 02:57:53 matsuu Exp $
+
+EAPI="4"
+inherit perl-module
+
+IUSE=""
+
+DESCRIPTION="Perl binding for MeCab"
+HOMEPAGE="http://mecab.sourceforge.net/"
+SRC_URI="http://mecab.googlecode.com/files/${P}.tar.gz"
+
+LICENSE="|| ( BSD LGPL-2.1 GPL-2 )"
+KEYWORDS="~amd64 ~ia64 ~x86"
+SLOT="0"
+
+DEPEND=">=app-text/mecab-${PV}
+	dev-lang/perl"
+RDEPEND="${DEPEND}"
+
+src_install() {
+
+	perl-module_src_install || die
+	dohtml bindings.html || die
+	dodoc test.pl || die
+
+}
