@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/mecab-perl
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/mecab-perl/ChangeLog,v 1.12 2010/01/23 09:06:49 matsuu Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/mecab-perl/ChangeLog,v 1.13 2012/01/21 02:57:52 matsuu Exp $
+
+*mecab-perl-0.991 (21 Jan 2012)
+
+  21 Jan 2012; MATSUU Takuto <matsuu@gentoo.org> +mecab-perl-0.991.ebuild:
+  Version bumped.
 
 *mecab-perl-0.98 (23 Jan 2010)
 
